--- a/styleDescarga.css
+++ b/styleDescarga.css
@@ -140,11 +140,11 @@ body {
 
   }
   .imagen-derecha {
-    float: left;
+    float: right;
     width: 300px; 
     height: 540px;
-    margin-left: 1400px;
-    margin-top: -300px;
+    margin-left: auto;
+    margin-top: -325px;
   }
   body {
     margin: 0;
