--- a/public/assets/styles/styleHome.css
+++ b/public/assets/styles/styleHome.css
@@ -99,7 +99,7 @@
 
 
 .seccion-imagen-fondo {
-  background-image: url('public/assets/images/hOLA.jpg'); 
+  background-image: url('images/hOLA.jpg'); 
   text-align: center;
   color: white;
 
